// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionListItem should render completed bridge tx summary 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="mm-box activity-list-item transaction-list-item mm-box--padding-4 mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--width-full mm-box--background-color-background-default"
      data-testid="activity-list-item"
      tabindex="0"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full"
      >
        <div
          class="mm-box mm-box--display-inline-flex"
        >
          <div
            class="mm-box mm-badge-wrapper mm-box--display-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-icon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-primary-muted mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/bridge.svg');"
              />
            </div>
            <div
              class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--circular-bottom-right"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network activity-tx__network-badge mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                data-testid="activity-tx-network-badge"
              >
                ?
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box activity-list-item__content-container mm-box--display-inline-flex mm-box--justify-content-space-between mm-box--width-full"
        >
          <div
            class="mm-box activity-list-item__detail-container mm-box--display-inline-flex mm-box--flex-direction-column mm-box--min-width-0"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
                data-testid="activity-list-item-action"
              >
                Bridge to OP Mainnet
              </p>
            </div>
            <div
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-normal mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
            >
              <div
                class="transaction-status-label transaction-status-label--confirmed"
              >
                Confirmed
              </div>
            </div>
          </div>
          <div
            class="mm-box activity-list-item__right-content mm-box--display-inline-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--height-min"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text activity-list-item__primary-currency mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-right mm-box--color-text-default"
                data-testid="transaction-list-item-primary-currency"
                title="-2 USDC"
              >
                -2 USDC
              </p>
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--color-text-alternative"
              data-testid="transaction-list-item-secondary-currency"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TransactionListItem should render confirmed legacy swap tx summary 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="mm-box activity-list-item transaction-list-item mm-box--padding-4 mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--width-full mm-box--background-color-background-default"
      data-testid="activity-list-item"
      tabindex="0"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full"
      >
        <div
          class="mm-box mm-box--display-inline-flex"
        >
          <div
            class="mm-box mm-badge-wrapper mm-box--display-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-icon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-primary-muted mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/swap-horizontal.svg');"
              />
            </div>
            <div
              class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--circular-bottom-right"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network activity-tx__network-badge mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                data-testid="activity-tx-network-badge"
              >
                ?
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box activity-list-item__content-container mm-box--display-inline-flex mm-box--justify-content-space-between mm-box--width-full"
        >
          <div
            class="mm-box activity-list-item__detail-container mm-box--display-inline-flex mm-box--flex-direction-column mm-box--min-width-0"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
                data-testid="activity-list-item-action"
              >
                Swap USDC to UNI
              </p>
            </div>
            <div
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-normal mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
            >
              <div
                class="transaction-status-label transaction-status-label--confirmed"
              >
                Confirmed
              </div>
            </div>
          </div>
          <div
            class="mm-box activity-list-item__right-content mm-box--display-inline-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--height-min"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text activity-list-item__primary-currency mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-right mm-box--color-text-default"
                data-testid="transaction-list-item-primary-currency"
                title="-2 USDC"
              >
                -2 USDC
              </p>
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--color-text-alternative"
              data-testid="transaction-list-item-secondary-currency"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TransactionListItem should render confirmed unified swap tx summary 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="mm-box activity-list-item transaction-list-item mm-box--padding-4 mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--width-full mm-box--background-color-background-default"
      data-testid="activity-list-item"
      tabindex="0"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full"
      >
        <div
          class="mm-box mm-box--display-inline-flex"
        >
          <div
            class="mm-box mm-badge-wrapper mm-box--display-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-icon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-primary-muted mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/swap-horizontal.svg');"
              />
            </div>
            <div
              class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--circular-bottom-right"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network activity-tx__network-badge mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                data-testid="activity-tx-network-badge"
              >
                ?
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box activity-list-item__content-container mm-box--display-inline-flex mm-box--justify-content-space-between mm-box--width-full"
        >
          <div
            class="mm-box activity-list-item__detail-container mm-box--display-inline-flex mm-box--flex-direction-column mm-box--min-width-0"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
                data-testid="activity-list-item-action"
              >
                Swap  to 
              </p>
            </div>
            <div
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-normal mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
            >
              <div
                class="transaction-status-label transaction-status-label--confirmed"
              >
                Confirmed
              </div>
            </div>
          </div>
          <div
            class="mm-box activity-list-item__right-content mm-box--display-inline-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--height-min"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text activity-list-item__primary-currency mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-right mm-box--color-text-default"
                data-testid="transaction-list-item-primary-currency"
                title="-0 ETH"
              >
                -0 ETH
              </p>
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--color-text-alternative"
              data-testid="transaction-list-item-secondary-currency"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TransactionListItem should render failed legacy swap tx summary 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="mm-box activity-list-item transaction-list-item transaction-list-item--unconfirmed mm-box--padding-4 mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--width-full mm-box--background-color-background-default"
      data-testid="activity-list-item"
      tabindex="0"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full"
      >
        <div
          class="mm-box mm-box--display-inline-flex"
        >
          <div
            class="mm-box mm-badge-wrapper mm-box--display-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-icon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-error-default mm-box--background-color-error-muted mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/swap-horizontal.svg');"
              />
            </div>
            <div
              class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--circular-bottom-right"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network activity-tx__network-badge mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                data-testid="activity-tx-network-badge"
              >
                ?
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box activity-list-item__content-container mm-box--display-inline-flex mm-box--justify-content-space-between mm-box--width-full"
        >
          <div
            class="mm-box activity-list-item__detail-container mm-box--display-inline-flex mm-box--flex-direction-column mm-box--min-width-0"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
                data-testid="activity-list-item-action"
              >
                Swap USDC to UNI
              </p>
            </div>
            <div
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-normal mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
            >
              <div
                class="transaction-status-label transaction-status-label--failed transaction-status-label--failed"
              >
                Failed
              </div>
            </div>
          </div>
          <div
            class="mm-box activity-list-item__right-content mm-box--display-inline-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--height-min"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text activity-list-item__primary-currency mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-right mm-box--color-text-default"
                data-testid="transaction-list-item-primary-currency"
                title="-2 USDC"
              >
                -2 USDC
              </p>
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--color-text-alternative"
              data-testid="transaction-list-item-secondary-currency"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`TransactionListItem should render pending bridge tx summary 1`] = `
<body>
  <div
    id="popover-content"
  />
  <div>
    <div
      class="mm-box activity-list-item transaction-list-item mm-box--padding-4 mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--width-full mm-box--background-color-background-default"
      data-testid="activity-list-item"
      tabindex="0"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full"
      >
        <div
          class="mm-box mm-box--display-inline-flex"
        >
          <div
            class="mm-box mm-badge-wrapper mm-box--display-block"
          >
            <div
              class="mm-box mm-text mm-avatar-base mm-avatar-base--size-md mm-avatar-icon mm-text--body-sm mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-primary-muted mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
            >
              <span
                class="mm-box mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                style="mask-image: url('./images/icons/bridge.svg');"
              />
            </div>
            <div
              class="mm-box mm-badge-wrapper__badge-container mm-badge-wrapper__badge-container--circular-bottom-right"
            >
              <div
                class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network activity-tx__network-badge mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
                data-testid="activity-tx-network-badge"
              >
                ?
              </div>
            </div>
          </div>
        </div>
        <div
          class="mm-box activity-list-item__content-container mm-box--display-inline-flex mm-box--justify-content-space-between mm-box--width-full"
        >
          <div
            class="mm-box activity-list-item__detail-container mm-box--display-inline-flex mm-box--flex-direction-column mm-box--min-width-0"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
                data-testid="activity-list-item-action"
              >
                Bridge to OP Mainnet
              </p>
            </div>
            <div
              class="mm-box mm-text mm-text--body-md mm-text--font-weight-normal mm-text--ellipsis mm-text--text-align-left mm-box--color-text-default"
            >
              <div
                class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column"
              >
                <p
                  class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
                >
                  Transaction 2 of 2
                </p>
                <div
                  class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--width-full"
                >
                  <div
                    class="mm-box mm-box--width-full mm-box--background-color-background-alternative mm-box--rounded-pill"
                  >
                    <div
                      class="mm-box bridge-transaction-details__segment bridge-transaction-details__segment--complete mm-box--width-full mm-box--background-color-primary-default mm-box--rounded-pill"
                    />
                  </div>
                  <div
                    class="mm-box mm-box--width-full mm-box--background-color-background-alternative mm-box--rounded-pill"
                  >
                    <div
                      class="mm-box bridge-transaction-details__segment bridge-transaction-details__segment--pending mm-box--width-full mm-box--background-color-primary-default mm-box--rounded-pill"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mm-box activity-list-item__right-content mm-box--display-inline-flex mm-box--flex-direction-column mm-box--align-items-flex-end mm-box--height-min"
          >
            <div
              class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
            >
              <p
                class="mm-box mm-text activity-list-item__primary-currency mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-right mm-box--color-text-default"
                data-testid="transaction-list-item-primary-currency"
                title="-2 USDC"
              >
                -2 USDC
              </p>
            </div>
            <p
              class="mm-box mm-text mm-text--body-md mm-text--text-align-right mm-box--color-text-alternative"
              data-testid="transaction-list-item-secondary-currency"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
